--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,19 @@
     <title>election-ternary-plots</title>
     <!-- If you add `extractCSS:true` to your build config, add the <link> below -->
     <!-- <link rel="stylesheet" href="index.css" /> -->
-    <script src="index.js"></script>
+    <script src="builder.js"></script>
+    <link
+      rel="preload"
+      href="//res.abc.net.au/fonts/abcsansnova/20211112/abcsansnova-regular.woff2"
+      as="font"
+      type="font/woff2"
+    />
     <!-- If you add `addModernJS:true` to your build config, replace the <script> above with the ones below -->
     <!-- <script type="module" src="index_modern.js"></script> -->
     <!-- <script nomodule src="index.js"></script> -->
   </head>
   <body>
-    <div data-mount id="electionternaryplotsX42YtextZtrue"></div>
+    <div data-mount id="electionternaryplots"></div>
     <!-- Mock Odyssey's loaded event so the `whenOdysseyLoaded` promise resolves -->
     <script>
       window.dispatchEvent(new CustomEvent('odyssey:api'));
